Fixed the overlapping of info cards with the hero section

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@
   justify-content: space-between;
   padding: 2.78rem 4.17rem;
   font-family: "Open Sans", serif;
+  box-sizing: border-box;
+  position: relative;
+  z-index: 2;
 }
 
 #logo img {
@@ -39,19 +42,21 @@
 
 /**************** Hero Section Styling ****************/
 #hero-section {
-  width: 100vw;
-  height: 960px;
+  width: 100%;
+  min-height: 960px;
   background-color: var(--veryPaleCyan);
   background-image: url("./images/bg-hero-desktop.svg");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -10;
+  z-index: 1;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  box-sizing: border-box;
+  padding-top: 150px;
 }
 
 #hero-section img {
@@ -93,14 +98,15 @@
 
 /****************** Info Cards Styling ********************/
 #info-cards {
-  width: 100vw;
-  margin-top: 110vh;
+  width: 100%;
+  padding-top: 960px;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   gap: 45px;
   align-items: center;
-  z-index: 1000;
+  z-index: 2;
 }
 
 .info-card {
@@ -197,6 +203,7 @@ footer {
   align-items: start;
   position: relative;
   z-index: 1;
+  box-sizing: border-box;
 }
 
 #footer-content {
